--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js"
+    "tsc": "npx tsc --listFiles"
   },
   "author": "Furvent",
   "license": "ISC",
