--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "tsc": "npx tsc --listFiles"
+    "tsc": "npm run cleanDist && npx tsc --listFiles",
+    "cleanDist":"rm -r dist"
   },
   "author": "Furvent",
   "license": "ISC",
